reel , like done

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ pass= "nwipsgfbiajdfqqd"
 
 
 secret_key="secret"
+
+
+CLOUDINARY_NAME=dk3hy0n39
+CLOUDINARY_API_KEY=497355273856139
+CLOUDINARY_API_SECRET=aLe6nJV5TmPUAXm9TV1BE1_zr_c
+CLOUDINARY_BaseUrl = https://res.cloudinary.com/dk3hy0n39/video/upload/<id> // id mein video ka url ai ga
