--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ secret_key="secret"
 CLOUDINARY_NAME=dk3hy0n39
 CLOUDINARY_API_KEY=497355273856139
 CLOUDINARY_API_SECRET=aLe6nJV5TmPUAXm9TV1BE1_zr_c
-CLOUDINARY_BaseUrl = https://res.cloudinary.com/dk3hy0n39/video/upload/<id> // id mein video ka url ai ga
+CLOUDINARY_BaseUrl_Video = https://res.cloudinary.com/dk3hy0n39/video/upload/<id> // id mein video ka url ai ga
+CLOUDINARY_BaseUrl_Image = https://res.cloudinary.com/dk3hy0n39/image/upload/id
