google signup and login

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ CLOUDINARY_API_KEY=497355273856139
 CLOUDINARY_API_SECRET=aLe6nJV5TmPUAXm9TV1BE1_zr_c
 CLOUDINARY_BaseUrl_Video = https://res.cloudinary.com/dk3hy0n39/video/upload/<id> // id mein video ka url ai ga
 CLOUDINARY_BaseUrl_Image = https://res.cloudinary.com/dk3hy0n39/image/upload/id
+GOOGLE_CLIENT_ID = "217625880670-aj86uhlhn352cpttla13d1op0se31nub.apps.googleusercontent.com"
