--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.2.0",
     "express-form-data": "^2.0.23",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^9.11.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
